Adicionando seções ao projeto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 <body>
     <header class="header"></header>
     <main class="main">
-        section.section
+        <section class="section">
+            <div class="wrapper">
+                <h1>Black Friday</h1>
+            </div>
+        </section>
+        <section class="section">
+            <div class="wrapper"></div>
+        </section>
+        <section class="section">
+            <div class="wrapper"></div>
+        </section>
     </main>
     <footer class="footer"></footer>
 
