Adicionando script ao projeto

--- a/index.html
+++ b/index.html
@@ -13,18 +13,32 @@
     <header class="header"></header>
     <main class="main">
         <section class="section">
-            <div class="wrapper">
-                <h1>Black Friday</h1>
+            <div class="container">
+                <div class="wrapper">
+                    <h1>Esquenta Black Friday</h1>
+                </div>
             </div>
         </section>
         <section class="section">
-            <div class="wrapper"></div>
+            <div class="container"></div>
         </section>
         <section class="section">
-            <div class="wrapper"></div>
+            <div class="container">
+                <div id="content">
+                    <form id="form">
+                      <input type="text" placeholder="name" id="nome">
+                      <input type="text" placeholder="email" id="email">
+                      <input type="submit" value="Cadastrar">
+                    </form>
+                  </div>
+            </div>
         </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="container">
+            <p>Todos os direitos reservados.</p>
+        </div>
+    </footer>
 
     <script src="./src/js/script.js"></script>
 </body>
