Adicionando Sass e Gul

--- a/index.html
+++ b/index.html
@@ -4,31 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./src/assets/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./src/css/style.css">
     <title>Esquenta Black Friday</title>
     <meta name="description" content=""/>
+
+    <link rel="icon" href="./src/assets/images/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-    <header class="header"></header>
+    <header class="header">
+        <div class="contatiner">
+            <span class="header__logo">
+                <a href="" class="header__logo-link">
+                    Gama Friday
+                </a>
+            </span>
+            <nav class="header__menu">
+                <ul class="header__menu-list">
+                    <li class="header__menu-item"><a href="" class="header__menu-link"></a></li>
+                    <li class="header__menu-item"><a href="" class="header__menu-link"></a></li>
+                    <li class="header__menu-item"><a href="" class="header__menu-link"></a></li>
+                    <li class="header__menu-item"><a href="" class="header__menu-link"></a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main class="main">
-        <section class="section">
+        <section class="section section-into">
             <div class="container">
-                <div class="wrapper">
+                <div class="section-into__collumn section-into__collumn--6">
                     <h1>Esquenta Black Friday</h1>
-                </div>
+                </div>    
             </div>
         </section>
         <section class="section">
-            <div class="container"></div>
-        </section>
-        <section class="section">
             <div class="container">
-                <div id="content">
-                    <form id="form">
-                      <input type="text" placeholder="name" id="nome">
-                      <input type="text" placeholder="email" id="email">
-                      <input type="submit" value="Cadastrar">
+                <div class="'" id="content">
+                    <form class="form" id="form">
+                      <input type="text" placeholder="name" id="nome" class="">
+                      <input type="text" placeholder="email" id="email" class="">
+                      <input type="submit" value="Cadastrar" class="">
                     </form>
                   </div>
             </div>
