--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section class="section">
             <div class="container">
-                <div class="'" id="content">
+                <div class="" id="content">
                     <form class="form" id="form">
                       <input type="text" placeholder="name" id="nome" class="">
                       <input type="text" placeholder="email" id="email" class="">
