--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="contatiner">
+        <div class="container">
             <span class="header__logo">
                 <a href="" class="header__logo-link">
                     Gama Friday
@@ -37,15 +37,21 @@
                 <div class="section-into__collumn section-into__collumn--6">
                     <h1>Esquenta Black Friday</h1>
                 </div>    
+                <div class="section-into__collumn section-into__collumn--6">
+                    
+                </div>   
             </div>
         </section>
-        <section class="section">
+        <section class="section section-form">
             <div class="container">
-                <div class="" id="content">
-                    <form class="form" id="form">
-                      <input type="text" placeholder="name" id="nome" class="">
-                      <input type="text" placeholder="email" id="email" class="">
-                      <input type="submit" value="Cadastrar" class="">
+                <div class="section-form__collumn section-form__collumn--6">
+                    
+                </div> 
+                <div class="section-form__collumn section-form__collumn--6" id="content">
+                    <form class="section-form__form" id="form">
+                      <input type="text" placeholder="name" id="nome" class="section-form__input-name">
+                      <input type="text" placeholder="email" id="email" class="section-form__input-email">
+                      <input type="submit" value="Cadastrar" class="section-form__button">
                     </form>
                   </div>
             </div>
